--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^4.4.0",
     "react-paystack": "^4.0.1",
     "react-redux": "^8.0.4",
